2004-09-02  Mark Salter  <msalter@redhat.com>

	* include/hal_platform_extras.h: Removed.
	* misc/redboot_ROMLE.ecm: New file.
	* misc/redboot_RAMLE.ecm: New file.
	* cdl/hal_arm_xscale_grg.cdl: Add little-endian support.
	* misc/redboot_RAM.ecm: Ditto.
	* misc/redboot_ROM.ecm: Ditto.
	* include/hal_platform_setup.h: Ditto.
	* include/grg.h: Add some defines for use in page table setup.

2003-06-30  Mark Salter  <msalter@redhat.com>

	* include/hal_platform_setup.h: Fix CYGINT_HAL_ARM_BIGENDIAN test.
	Remove unused ROMRAM cruft.

2003-04-04  Mark Salter  <msalter@redhat.com>

	* include/grg.h: Add GPIO line definitions.
	* include/hal_plf_ints.h: Add GPIO IRQ definitions.
	* src/grg_misc.c (plf_hardware_init): Initialize GPIO lines.

2003-04-02  Mark Salter  <msalter@redhat.com>

	* misc/redboot_ROM.ecm: Don't set I82559_WRITE_EEPROM.
	* misc/redboot_RAM.ecm: Ditto.

2003-02-22  Mark Salter  <msalter@redhat.com>

	* cdl/hal_arm_xscale_grg.cdl: Fix HAL_PLATFORM_MACHINE_TYPE.

2003-02-13  Mark Salter  <msalter@redhat.com>

	* include/hal_platform_extras.h: Move uncached area. Create RAM
	alias area.

2003-02-12  Mark Salter  <msalter@redhat.com>

	* misc/*.ecm: Turn on CYGPKG_DEVS_ETH_INTEL_I82559_WRITE_EEPROM.

2003-02-07  Mark Salter  <msalter@redhat.com>

	* Initial checkin.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or